--- a/src/components/projects.module.css
+++ b/src/components/projects.module.css
@@ -12,31 +12,42 @@
 
 .section {
   display: grid;
-  grid-template-rows: 10fr 10fr 1fr;
-  /* gap: 20px; */
+  grid-template-rows: 2fr 4fr 1fr;
+  /* gap: 10px; */
   background-color: rgb(251, 247, 239);
   box-shadow: 3px 3px 6px rgb(177, 176, 176);
   /* border-radius: 10px; */
-  /* padding: 20px; */
+  padding: 10px;
   max-width: auto;
   /* justify-items: stretch;*/
   align-items: start;
-  transition: transform 0.5s;
+  transition: transform 0.2s;
   border: 1px dotted goldenrod;
+  color: black;
+  text-decoration: black;
+  -webkit-text-decoration: black;
+  font-weight: 100;
   /* margin: 0px 0px 50px 0px; */
 }
 
 .section:hover {
   transform: scale(1.05);
   cursor: pointer;
+  color: black;
+  text-decoration: none;
+  -webkit-text-decoration: none;
 }
 
-.filldiv {
+.section:hover > .image {
+  filter: sepia(100%) blur(0px);
+}
+
+/* .filldiv {
   display: block;
   height: 100%;
   width: 100%;
   text-decoration: none;
-}
+} */
 
 .tags {
   grid-column: 1 / 2;
@@ -45,7 +56,16 @@
   display: flex;
   justify-content: center;
   align-self: end;
-  color: rgb(177, 135, 29);
+  gap: 15px;
+}
+
+.tag {
+  color: goldenrod;
+  font-weight: bolder;
+  font-size: 15px;
+  background-color: rgb(246, 233, 202);
+  border-radius: 8px;
+  padding: 0px 6px 0px 6px;
 }
 
 .name {
@@ -62,7 +82,8 @@
   grid-row: 1/ 2;
   /* filter: drop-shadow(2px 2px 2px #f6c98e); */
   width: 100%;
-  height: 100%;
+  height: 7cap;
+  object-position: 0% 0%;
   /* margin-top: 0px;
   margin-bottom: 10px; */
   /* transition: transform 0.5s; */
@@ -70,15 +91,17 @@
   align-self: start;
   justify-self: start;
   /* border-radius: 10px; */
+  filter: sepia(100%) blur(1px);
 }
 
 .desc {
   grid-column: 1/ 2;
   grid-row: 2 / 3;
-  padding: 25px 10px 0px 10px;
+  padding: 10px 10px 0px 10px;
   justify-self: center;
   align-self: start;
   /* background-color: pink; */
+  min-height: 9lh;
 }
 
 /*-------------------------------------------*/
@@ -99,7 +122,7 @@
 
   .section {
     display: grid;
-    grid-template-rows: 10fr 8fr 1fr;
+    grid-template-rows: 2r 4fr 1fr;
     /* gap: 20px; */
 
     box-shadow: 3px 3px 6px rgb(177, 176, 176);
@@ -111,9 +134,27 @@
     transition: transform 0.5s;
     margin: 0px 0px 40px 0px;
   }
+
+  .section:hover {
+    transform: scale(1.05);
+    cursor: pointer;
+    color: black;
+    text-decoration: none;
+    -webkit-text-decoration: none;
+  }
+
+  .desc {
+    min-height: 7lh;
+    /* background-color: red; */
+  }
+
+  .image {
+    filter: sepia(100%);
+  }
 }
 
-@media (max-width: 800px) {
+/* MOBILE */
+@media (max-width: 799px) {
   .container {
     display: flex;
     flex-direction: column;
@@ -130,7 +171,7 @@
     /* background-color: rgb(161, 153, 153); */
     align-items: flex-end;
     justify-content: flex-start;
-
+    gap: 10px;
     margin: 0px 0px 40px 0px;
   }
 
@@ -149,12 +190,13 @@
   .image {
     /* border-style: solid; */
     width: 100%;
-    height: auto;
+    max-height: 50%;
     justify-self: center;
     align-self: center;
     /* filter: drop-shadow(4px 4px 4px #f6c98e); */
     transition: none;
-    object-fit: contain;
+    object-fit: cover;
+    filter: sepia(100%);
   }
 
   .desc {
